--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -41,7 +41,7 @@
       
       <h1><a href="https://herrkm.github.io/nycscertweb/">Kiana's Page: Home</a></h1>
       {% for page in site.pages %}
-      <a href={{ page.filename }}>{{ page.title }}</a>
+      <a href="~/" + {{ page.filename }}>{{ page.title }}</a>
       {% endfor %}
       
 
