--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -40,9 +40,7 @@
     <div class="container-lg px-3 my-5 markdown-body">
       
       <h1><a href="https://herrkm.github.io/nycscertweb/">Kiana's Page: Home</a></h1>
-      {% for page in site.pages %}
-      <a href= {{ page.filename }}>{{ page.title }}</a>
-      {% endfor %}
+      <a href="https://herrkm.github.io/nycscertweb/SEDC71900/04_unplugged">Unplugged Activity</a>
       
 
       {{ content }}
