--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -23,7 +23,7 @@
 {"@context":"https://schema.org","@type":"WebSite","description":"Repo for creating GitHub pages site","headline":"nycscertweb","name":"nycscertweb","url":"https://herrkm.github.io/nycscertweb/"}</script>
 <!-- End Jekyll SEO tag -->
 
-    <!-- <link rel="stylesheet" href="/nycscertweb/assets/css/style.css?v=d6a6310671f597b79453a87a102a092e5bcb2d02"> -->
+     <link rel="stylesheet" href="/nycscertweb/"> 
     <!-- start custom head snippets, customize with your own _includes/head-custom.html file -->
 
 <!-- Setup Google Analytics -->
