--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -39,7 +39,7 @@
   <body>
     <div class="container-lg px-3 my-5 markdown-body">
       
-      <h1><a href="https://herrkm.github.io/nycscertweb/">Kiana's Page: Home</a></h1>
+      <h1><a href={{ filename }} > {{ title }}</a></h1>
       
 
       {{ content }}
