--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -39,7 +39,7 @@
   <body>
     <div class="container-lg px-3 my-5 markdown-body">
       
-      <h1><a href=index > {{ Kiana Herr's Hunter College Advanced Certificate Portfolio </h1>
+      <h1><a href=index > {{ Kiana Herr's Hunter College Advanced Certificate Portfolio }}</a> </h1>
       <h2> {{ page.title }} </h2>
       
 
