--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -37,9 +37,11 @@
 
   </head>
   <body>
+
+    
     <div class="container-lg px-3 my-5 markdown-body">
       
-      <h1><a href="https://herrkm.github.io/nycscertweb/" > {{ Kiana Herr's Hunter College Advanced Certificate Portfolio }}</a> </h1>
+      <h1><a href="https://herrkm.github.io/nycscertweb/" > Kiana Herr's Hunter College Advanced Certificate Portfolio </a> </h1>
       <h2> {{ page.title }} </h2>
       
 
