--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -44,7 +44,7 @@
       <h1><a href="https://herrkm.github.io/nycscertweb/" > Kiana Herr's Hunter College Advanced Certificate Portfolio </a> </h1>
       {% unless page.status == "hidetitle" %}
         <h2> {{ page.title }} </h2>
-      {% endunless }
+      {% endunless %}
       
 
       {{ content }}
